<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.amalgamasimulation</groupId>
  <artifactId>tutorial-step-2</artifactId>
  <version>1.0</version>
  <packaging>jar</packaging>

  <name>tutorial-step-2</name>
  <url>https://platform.amalgamasimulation.com/amalgama/SupplyChainTutorial/platform_tutorial_step_2.html</url>

  <properties>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <repositories>
    <repository>
      <id>amalgama-platform-maven</id>
      <url>https://nexus.am-sim.com/repository/amalgama-platform-mvn/</url>
    </repository>
  </repositories>

  <dependencies>

    <!-- AMALGAMA LIBRARIES -->
    <dependency>
      <groupId>com.amalgamasimulation</groupId>
      <artifactId>com.amalgamasimulation.engine</artifactId>
      <version>1.11.0</version>
    </dependency>
    <dependency>
      <groupId>com.amalgamasimulation</groupId>
      <artifactId>com.amalgamasimulation.graphagent</artifactId>
      <version>1.8.2</version>
    </dependency>

    <!-- Testing -->
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <version>5.9.2</version>
      <scope>test</scope>
    </dependency>

    <!-- JSON -->
    <dependency>
      <groupId>org.json</groupId>
      <artifactId>json</artifactId>
      <version>20180130</version>
    </dependency>
  </dependencies>


  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.2.2</version>
        <configuration>
          <archive>
            <manifest>
              <addClasspath>true</addClasspath>
              <mainClass>tutorial.Main</mainClass>
              <classpathPrefix>dependency-jars/</classpathPrefix>
            </manifest>
          </archive>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-dependency-plugin</artifactId>
        <version>2.5.1</version>
        <executions>
          <execution>
            <id>copy-dependencies</id>
            <phase>package</phase>
            <goals>
              <goal>copy-dependencies</goal>
            </goals>
            <configuration>
              <outputDirectory>
                ${project.build.directory}/dependency-jars/
              </outputDirectory>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>
